--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,7 +1,7 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
+
 body {
-    /* font-family: ; */
-    margin: 0;
-    padding: 0;
+    
 }
 
 footer {
