--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,19 +1,16 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css");
 
-body {}
-
 .dashboard h3 {
     margin: 0;
 }
 
-.dashboard {
+.dashboard, .subscriptions {
     display: flex;
     align-items: center;
-    /* flex-wrap: wrap; */
     justify-content: space-between;
 }
 
-.my-card {
+.my-card, .box {
     width: 350px;
     height: 150px;
     padding: 10px 20px;
@@ -23,13 +20,21 @@ body {}
     background: linear-gradient(45deg, rgb(0, 110, 255), rgb(123, 200, 255) ) ;
 }   
 
+.box {
+    height: max-content;
+}
+
 @media screen and (max-width: 860px) {
-    .dashboard {
+    .dashboard, .subscriptions {
         display: block;
     }
 
     .my-card {
         width: auto;
         height: 150px;
+    }
+    .box {
+        width: auto;
+        height: 200px;
     }
 }
