--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -35,6 +35,7 @@
     }
     .box {
         width: auto;
-        height: 200px;
+        min-height: max-content;
+        text-align: center;
     }
 }
