--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -9,8 +9,10 @@
     align-items: stretch;
     justify-content: space-between;
 }
+
 .subscriptions {
     display: flex;
+    flex-wrap: wrap;
     align-items: stretch;
     justify-content: flex-start;
 }
