--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -43,9 +43,12 @@
     width: 100%;
     height: 100%;
     background-color: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
     z-index: 9999;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
 }
 
