--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -36,41 +36,36 @@
 }
 
 /* PAGE LOADER */
-#loading-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
+#loader {
+    position: absolute;
     width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255, 0.8);
-    backdrop-filter: blur(5px);
-    -webkit-backdrop-filter: blur(5px);
+    height: 3px;
+    background: #0066ff;
+    /* background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet); */
+    top: 0px;
     z-index: 9999;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
+    -webkit-animation: loader .6s linear infinite;
+    /* Safari and Chrome */
+    -moz-animation: loader .6s linear infinite;
+    /* Firefox */
+    -o-animation: loader .6s linear infinite;
+    /* Opera */
+    animation: loader .6s linear infinite;
 }
 
-#loading-spinner {
-    border: 5px solid #f3f3f3;
-    border-top: 10px solid #3498db;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    animation: spin .7s linear infinite;
-}
-
-@keyframes spin {
+@keyframes loader {
     0% {
-        transform: rotate(0deg);
+        background: #0066ff
+    }
+
+    50% {
+        background: #fff;
     }
 
     100% {
-        transform: rotate(360deg);
+        background: #0066ff
     }
 }
-
 
 @media screen and (max-width: 860px) {
 
